feature: added content retrieval operation